# tictactoe-444

./: .clang-format  .flowmark.toml  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md
cmake/: prepare_vendored.cmake
docs/plans/: 2026-04-06-gameplay-improvements.md  2026-04-06-shutdown.md  2026-04-07-script-replay-trace.md
src/: Game.cpp  Game.hpp  Renderer.hpp  Renderer.mm  Replay.cpp  Replay.hpp  main.cpp  metal_impl.mm  replay_main.cpp  shaders.metal
tests/: CMakeLists.txt  replay_tests.cpp
